--- a/IntroductionToPython/15.5-Recursion.ipynb
+++ b/IntroductionToPython/15.5-Recursion.ipynb
@@ -13,7 +13,7 @@
     "From a practical point of view with programming, a recursive function is any function that calls itself. Indirect recursion exists when a function invokes another function before the original function is called again without any returns. Recursive solutions will have cycles (loops) within the call graph.\n",
     "\n",
     "That last paragraph brings back the concept of repetition.  Revisiting Python's loop statements (`while` and `for`), both had methods to be able to stop the loop somehow.  `while` has a condition check before we began each iteration of the loop.  `for` has an implicit end to iteration once the sequence completes. Similarly, for recursive functions, we need to define a base case that allows the repetition to stop.  This base case will be the simplest case of the problem itself: \n",
-    "- _numerical_: when computing a numeric answer, the base case will be for 0 or 1.\n",
+    "- _numerical_: when computing a numeric answer, generally the base case will be for 0 or 1.\n",
     "- _structural_: when processing data structures(lists, dictionaries, sets, etc.), the base case exists when that structure is empty or has no members of a particular type\n"
    ]
   },
@@ -406,6 +406,32 @@
     "\n",
     "\n",
     "say_hello(5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d8c7e44e",
+   "metadata": {},
+   "source": [
+    "## Common Recursive Issues\n",
+    "Several issues can arise when using recursion:\n",
+    "1. No update exists to the data prior to the recursive call.  In this situation, we have not reduced the problem into a smaller subprogram.  This leads to a `RecursionError` as the function will just be called from itself without any change.\n",
+    "2. The base case is incorrect.  Earlier in this notebook, we showed the issue where we missed the base case due to an overly strict conditional check.  Other instances will occur when not all bases are appropriate defined.  As you will be asked in one of the exercises to compute [Fibonacci numbers](https://en.wikipedia.org/wiki/Fibonacci_number), you will see that two base cases exist.\n",
+    "3. Data within the function references a mutable data structure that is changed during the function.  As many recursive calls exist,  tracking changes to the data can be problematic.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0d2cd445",
+   "metadata": {},
+   "source": [
+    "## Reentrancy\n",
+    "The last issue brings up a concept within computing termed [\"reentrancy\"](https://en.wikipedia.org/wiki/Reentrancy_(computing). Functions are considered reentrant if multiple invocations can be safely executed concurrently.  Such concurrency exists on multi-processor system or when a procedure is temporarily interrupted (paused) to allow another thread/process to execute the function as well. This situation frequently occurs within web applications.  Typically, a function exists that serves as a route (an endpoint) for a particular URL. As many clients can request that URL simultaneously, the code that handles the request must allow for reentrancy.  While the Wikipedia page provides several rules functions should follow to be reentrant, the follow conditions suffice:\n",
+    "- State needs to be maintained within parameters and local variables\n",
+    "- Access to static variables (discussed in classes) and global variables must be read only.  This also requires that other code does not modify those variables. If those variables can be modified, the access to the variables must be synchronized. This is an advanced topic covered elsewhere.\n",
+    "- The the function can not share references to mutable objects (such as lists) - either within calls to itself or elsewhere within the program. Mutability means that we can not be sure that the object has been modified.\n",
+    "\n",
+    "You should strive to make your code reentrant whenever possible. Such code tends to avoid side-effects and is general easier to debug.  When multiple parts of a program or different processes can change problems it becomes difficult both to reproduce an issue as well as to track the issue's root cause."
    ]
   },
   {
