--- a/IntroductionToPython/02-Types,Values,Variables,Names.ipynb
+++ b/IntroductionToPython/02-Types,Values,Variables,Names.ipynb
@@ -82,7 +82,7 @@
     "\n",
     "So, once we create a string or an integer, we can no longer change its value.  Any updates to the value result in a new object.\n",
     "\n",
-    "As an analogy, consider a clear, sealed box.  You can peak at the contents, but you can touch or manipulate the contents of that box."
+    "As an analogy, consider a clear, sealed box.  You can peak at the contents, but you cannot touch or manipulate the contents of that box."
    ]
   },
   {
